alerta vaciar campos funcionando en proyector

--- a/materiales/templates/modals/alertas/alerta.html
+++ b/materiales/templates/modals/alertas/alerta.html
@@ -8,8 +8,8 @@
     </p>
     
     <div class="botones-tarjeta">
-        <button type="button" class="btn btn-cancelar-modal" id="btn-cancelar-vaciar">CANCELAR</button>
-        <button type="button" class="btn btn-confirmar-modal" id="btn-confirmar-vaciar">CONFIRMAR</button>
+        <button type="button" class="btn btn-cancelar-modal" id="btn-cancelar-vaciar" onclick="cerrarModal()">CANCELAR</button>
+        <button type="button" class="btn btn-confirmar-modal" id="btn-confirmar-vaciar" onclick="confirmarModal()">CONFIRMAR</button>
     </div>
 </div>
 
