alerta vaciar_campos en proyector

--- a/materiales/templates/materiales/formularios_altas/alta_proyector.html
+++ b/materiales/templates/materiales/formularios_altas/alta_proyector.html
@@ -37,7 +37,7 @@
 </form>
 
 <!-- Incluir el modal de alerta -->
-{% include 'modals/alertas/alerta.html' %}
+{% include 'modals/alertas/vaciar_campos.html' %}
 
 <!-- Importación del JS para el modal de vaciar campos -->
 <script src="{% static 'js/alertas.js' %}"></script>
