--- a/materiales/templates/materiales/formularios_editar/editar_proyector.html
+++ b/materiales/templates/materiales/formularios_editar/editar_proyector.html
@@ -204,7 +204,7 @@
 {% block content %}
 <div class="page-header">
     <h1 class="page-title">📽️ Editar Proyector</h1>
-    <p class="subtitle">{{ proyector.modelo_proy }}</p>
+    <p class="subtitle">{{ proyector.modelo_pro }}</p>
 </div>
 
 <div class="form-container">
