--- a/materiales/templates/materiales/formularios_altas/alta_varios.html
+++ b/materiales/templates/materiales/formularios_altas/alta_varios.html
@@ -1,8 +1,8 @@
 {% load static %}
 
-<div data-block="content" data-form="varios">
-    <!-- Campo hidden para serializar los datos dinámicos -->
-    <input type="hidden" id="gruposTiposVariosNuevo" name="gruposTiposVariosNuevo" value="">
+<div data-block="content" data-form-type="varios">
+        <!-- Campo hidden para serializar los datos dinámicos -->
+        <input type="hidden" id="gruposTiposVariosNuevo" name="gruposTiposVariosNuevo" value="">
     
     <div class="row mb-3">
         <div class="col-md-3">
@@ -57,8 +57,8 @@
     <!-- Botones -->
     <div class="row">
         <div class="col-12 d-flex justify-content-end gap-3">
-            <button type="reset" class="btn btn-outline-danger btn-sm">Cancelar</button>
-            <button type="submit" class="btn btn-primary btn-sm">Guardar</button>
+            <button type="button" class="btn btn-outline-danger btn-sm" onclick="cancelarFormulario()">CANCELAR</button>
+            <button type="submit" class="btn btn-primary btn-sm">GUARDAR</button>
         </div>
     </div>
 </div>
