correcciones en base de datos

--- a/materiales/templates/materiales/formularios_altas/alta_materiales.html
+++ b/materiales/templates/materiales/formularios_altas/alta_materiales.html
@@ -905,7 +905,7 @@ function initNotebookDynamicFunctionality() {
                                required>
                     </div>
                     <div class="col-md-3">
-                        <label for="cant_ejemplares_${index}" style="font-size: 14px;">Cant. de ejemplares <span class="text-danger">*</span></label>
+                        <label for="cant_ejemplares_${index}" style="font-size: 14px;">Cantidad <span class="text-danger">*</span></label>
                         <input type="number" class="form-control form-control-sm" 
                                id="cant_ejemplares_${index}" 
                                name="cant_ejemplares_${index}" 
