--- a/materiales/templates/materiales/formularios_altas/alta_varios.html
+++ b/materiales/templates/materiales/formularios_altas/alta_varios.html
@@ -20,7 +20,7 @@
         </div>
         
         <div class="col-md-3">
-            <label for="cant_ejemplares" style="font-size: 14px;">Cant. de ejemplares <span class="text-danger">*</span></label>
+            <label for="cant_ejemplares" style="font-size: 14px;">Cantidad <span class="text-danger">*</span></label>
             <input type="number" class="form-control form-control-sm" id="cant_ejemplares" name="cant_ejemplares" min="1" value="1" required>
         </div>
     </div>
